增加问题列表个人模块

--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -55,6 +55,7 @@
                     <li><a>&nbsp;</a></li>
                     <li id="replyProblem" class="layui-nav-item current" data-id="replyProblem"><a class="layui-nav-item ">回复问题</a></li>
                     <li id="listProblem" class="layui-nav-item current" data-id="listProblem"><a class="layui-nav-item ">问题列表</a></li>
+                    <li id="listProblem" class="layui-nav-item current" data-id="listProblemPC"><a class="layui-nav-item ">问题列表个人</a></li>
                     <li><a>&nbsp;</a></li>
                     <li id="ProblemRepair" class="layui-nav-item current" data-id="ProblemRepair"><a class="layui-nav-item ">问题列表维护</a></li>
                     <li id="areaMatch" class="layui-nav-item" data-id="areaMatch"><a class="layui-nav-item ">辖区配对维护</a></li>
@@ -177,6 +178,7 @@
 
         if (logviewer == "1") {
             $('#listProblem').show();
+            $('#listProblemPC').show();
         }
 
         if (!(navigator.userAgent.match(/(phone|pad|pod|mobile|ios|android|BlackBerry|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|symbian|transcoder)/i))) {
@@ -233,7 +235,7 @@
                 sId = "#" + dd1;
                 var newId = sId.substring(0, 9);
                 var repairID = null;
-                if (newId == "#RPDetail" || newId == "#PPDetail" || newId == "#APDetail") {
+                if (newId == "#RPDetail" || newId == "#PPDetail" || newId == "#APDetail" || newId == "PCDetail") {
                     var ss = sId.split('-');
                     repairID = ss[1];
                     sId = newId;
@@ -290,6 +292,10 @@
                     pathn = "@(Url.Action("ProblemListIndex", "Repair"))",
                         i = 0;
                     break; 
+                case "#listProblemPC":
+                    pathn = "@(Url.Action("ProblemListPCIndex", "Repair"))",
+                        i = 0;
+                    break; 
                 case "#ProblemRepair":
                     pathn = "@(Url.Action("ProblemAllVw", "Repair"))",
                         i = 0;
@@ -308,6 +314,10 @@
                     break; 
                 case "#APDetail"://问题列表维护详情
                     pathn = "@(Url.Action("ProblemAllDetailVw", "Repair"))?" + repairID,
+                        i = 0;
+                    break; 
+                case "#PCDetail"://问题列表个人 回复问题
+                    pathn = "@(Url.Action("ReplyRepairPCDetailVw", "Repair"))?" + repairID,
                         i = 0;
                     break; 
                 default:
