修改页面布局，css样式等问题

--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -82,12 +82,13 @@
 
             </div>
         </div>
-        <div class="layui-footer">
+        @*<div class="layui-footer">
             <p style="margin-left:300px">&copy; @DateTime.Now.Year - 888报修系统  若对报修系统有疑虑或系统发生错误，请洽资讯组</p>
-        </div>
+        </div>*@
     </div>
 </body>
 <script src="~/src/layui.js"></script>
+<script src="../src/xm-select.js"></script>
 <script>
     function formatDate(str) {
         if (str != null && str != '') {
