--- a/888repair/Views/Repair/ProblemAllVw.cshtml
+++ b/888repair/Views/Repair/ProblemAllVw.cshtml
@@ -78,115 +78,33 @@
                         <div class="layui-inline">
                             <label class="layui-form-label">执行状态</label>
                             <div class="layui-input-inline">
-                                <select ID="OpStatus" name="OpStatus">
-                                    <option value=""></option>
-                                </select>
+                                <div id="statusSelect"> </div>
                             </div>
                         </div>
                         <div class="layui-inline">
                             <label class="layui-form-label">负责人</label>
                             <div class="layui-input-inline">
-                                <select ID="OpChargeEmpname" name="OpChargeEmpname" lay-search="">
-                                    <option value=""></option>
-                                </select>
+                                <div id="chargeSelect"> </div>
                             </div>
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <div class="layui-inline" id="test6">
-                            <label class="layui-form-label">填表时间</label>
-                            <div class="layui-input-inline">
-                                <input type="text" class="layui-input" id="startDate">
+                            <label class="layui-form-label">填表月份</label>
+                            <div class="layui-input-inline" style="width:20%">
+                                <select id="queryYear" lay-filter="queryYear"></select>
                             </div>
-                            <div class="layui-form-mid">-</div>
+                            <div class="layui-form-mid">年</div>
                             <div class="layui-input-inline">
-                                <input type="text" class="layui-input" id="endDate">
+                                <div id="monthsSelect"></div>
                             </div>
+                            <div class="layui-form-mid">月</div>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-    @*<form class="layui-form layui-form-pane" action="">
-
-            <div class="layui-form-item">
-                <div class="layui-inline">
-                    <label class="layui-form-label">系统类别</label>
-                    <div class="layui-input-inline">
-                        <select ID="OpSystemCategory" name="OpSystemCategory" lay-filter="SystemCategory">
-                            <option value=""></option>
-                        </select>
-                    </div>
-                </div>
-                <div class="layui-inline">
-                    <label class="layui-form-label">大楼别</label>
-                    <div class="layui-input-inline">
-                        <select ID="OpBuilding" name="OpBuilding" lay-filter="Building">
-                            <option value=""></option>
-                        </select>
-                    </div>
-                </div>
-                <div class="layui-inline">
-                    <label class="layui-form-label">位置</label>
-                    <div class="layui-input-inline">
-                        <select ID="OpLocation" name="OpLocation">
-                            <option value=""></option>
-                        </select>
-                    </div>
-                </div>
-                <div class="layui-inline">
-                    <label class="layui-form-label">类别</label>
-                    <div class="layui-input-inline">
-                        <select ID="OpCategory" name="OpCategory">
-                            <option value=""></option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <div class="layui-inline">
-                    <label class="layui-form-label">反应人姓名</label>
-                    <div class="layui-input-inline">
-                        <input id="ResponseEmpname" name="ResponseEmpname" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-inline">
-                    <label class="layui-form-label">反应内容</label>
-                    <div class="layui-input-inline">
-                        <input id="ResponseContent" name="ResponseContent" class="layui-input" />
-                    </div>
-                </div>
-                <div class="layui-inline">
-                    <label class="layui-form-label">执行状态</label>
-                    <div class="layui-input-inline">
-                        <select ID="OpStatus" name="OpStatus">
-                            <option value=""></option>
-                        </select>
-                    </div>
-                </div>
-                <div class="layui-inline">
-                    <label class="layui-form-label">负责人</label>
-                    <div class="layui-input-inline">
-                        <select ID="OpChargeEmpname" name="OpChargeEmpname" lay-search="">
-                            <option value=""></option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <div class="layui-inline" id="test6">
-                    <label class="layui-form-label">填表时间</label>
-                    <div class="layui-input-inline">
-                        <input type="text" class="layui-input" id="startDate">
-                    </div>
-                    <div class="layui-form-mid">-</div>
-                    <div class="layui-input-inline">
-                        <input type="text" class="layui-input" id="endDate">
-                    </div>
-                </div>
-            </div>
-        </form>*@
         <div class="layui-btn-group" style="margin-left:1150px">
             <button class="layui-btn layui-btn-sm" id="btn_search"><i class="layui-icon">查询&nbsp;&#xe615;</i></button>
             <button class="layui-btn layui-btn-sm" id="btn_export"><i class="layui-icon">导出&nbsp;&#xe67d;</i></button>
@@ -284,6 +202,7 @@
                                 { field: 'ChargeEmpname', title: '当前负责人', },
                                 { field: 'STEP', title: '操作阶段', },
                                 { field: 'OPINION', title: '意见', },
+                                { field: 'STATUS', title: '当前状态', },
                                 { field: 'UpdateEmpName', title: '操作人',  },
                                 {
                                     field: 'UpdateTime', title: '操作时间',
@@ -354,7 +273,7 @@
         }
 
         $.ajax({
-            url: "@(Url.Action("getProblemList", "Repair"))",  // 要提交的URL路径
+            url: "@(Url.Action("getProblemAllList", "Repair"))",  // 要提交的URL路径
             type: "post",    // 发送请求的方式
             dataType: "JSON",     // 指定传输的数据格式
             beforeSend: function () {     //请求之前的方法
@@ -381,11 +300,11 @@
                                 last: false,
                                 layout: ['limit', 'prev', 'page', 'next', 'count'] //自定义分页布局
                             }
-                            , height: 670
+                            ,height: 670
                             , cellMinWidth: 80
                             //,skin: 'line'
                             //,size: 'lg'
-                            , toolbar: true
+                            , toolbar: false
                             , lineStyle: 'height: 70px;line-height: 18px;', // 定义表格的多行样式
                             css: [ // 直接给当前表格主容器重置 css 样式
                                 '.layui-table-page{text-align: center;}' // 让分页栏居中
@@ -438,13 +357,13 @@
                 Category: $('#OpCategory').val(),
                 ResponseEmpname: $('#ResponseEmpname').val(),
                 ResponseContent: $('#ResponseContent').val(),
-                ChargeEmpname: $('#OpChargeEmpname').val(),
-                startDate: $('#startDate').val(),
-                endDate: $('#endDate').val(),
-                Status: $('#OpStatus').val(),
+                ChargeEmpname: chargeString.getValue('valueStr'),
+                Status: statusString.getValue('valueStr'),
+                queryYear: $('#queryYear').val(),
+                queryMonths: monthsString.getValue('valueStr')
             }
             $.ajax({
-                url: "@(Url.Action("getProblemList", "Repair"))",   // 要提交的URL路径
+                url: "@(Url.Action("getProblemAllList", "Repair"))",   // 要提交的URL路径
                 type: "post",    // 发送请求的方式
                 data: model,
                 dataType: "JSON",     // 指定传输的数据格式
@@ -467,7 +386,90 @@
             });
         }
 
+        var statusString = {};
+        var data = [];
+          $.ajax({
+              url: "@(Url.Action("getStatus", "DDL"))",
+              type: "POST",
+              dataType: 'json',
+              success: function (result) {
+                  for (let i = 0, len = result.length; i < len; i++) {
+                      data.push({
+                          name: result[i]['StatusText'],
+                          value: result[i]['StatusValue']
+                      });  
+                  }
+                  statusString = xmSelect.render({
+                      el: '#statusSelect',
+                      name: 'status',
+                   //   max: 12,     // 最多选择 3 个
+                      data: data
+                  });
+              },
+              error: function (error) {
+                  console.log(error)
+              }
+          });  
+
+        var chargeString = {};
+        var data2 = [];
+          $.ajax({
+              url: "@(Url.Action("getChargePerson", "DDL"))",
+              type: "POST",
+              dataType: 'json',
+              success: function (result) {
+                  for (let i = 0, len = result.length; i < len; i++) {
+                      data2.push({
+                          name: result[i]['FullName'],
+                          value: result[i]['FullName']
+                      });  
+                  }
+                  chargeString = xmSelect.render({
+                      el: '#chargeSelect',
+                      name: 'charge',
+                    //  max: 12,     // 最多选择 3 个
+                      data: data2
+                  });
+              },
+              error: function (error) {
+                  console.log(error)
+              }
+          });  
+
+        var monthsString = {};
+        monthsString = xmSelect.render({
+            el: '#monthsSelect',
+            name: 'months',
+            // layVerify: 'required',
+          //  max: 12,     // 最多选择 3 个
+            data: [
+                { name: '1', value: 1 },
+                { name: '2', value: 2 },
+                { name: '3', value: 3 },
+                { name: '4', value: 4 },
+                { name: '5', value: 5 },
+                { name: '6', value: 6 },
+                { name: '7', value: 7 },
+                { name: '8', value: 8 },
+                { name: '9', value: 9 },
+                { name: '10', value: 10 },
+                { name: '11', value: 11 },
+                { name: '12', value: 12 }
+            ]
+        });
+
         function loadOption() {
+
+            var myDate = new Date();
+            var startYear = myDate.getFullYear() - 5;//起始年份
+            var endYear = myDate.getFullYear();//结束年份
+            for (var i = startYear; i <= endYear; i++) {
+                $("#queryYear").append("<option value='" + i + "'>" + i + "</option>");
+            }
+            $("#queryYear").val(myDate.getFullYear());
+            form.render();
+
+
             $("#OpBuilding").empty();
             $.ajax({
                 url: "@(Url.Action("getBuilding", "DDL"))",
@@ -489,27 +491,7 @@
                     console.log(error)
                 }
             });
-
-            $("#OpStatus").empty();
-            $.ajax({
-                url: "@(Url.Action("getStatus", "DDL"))",
-                type: "POST",
-                dataType: 'json',
-                success: function (result) {
-                    $('#OpStatus').append(new Option());
-                    for (let i = 0, len = result.length; i < len; i++) {
-                        $("#OpStatus").append(`<option value="${result[i].StatusValue}">${result[i].StatusText}</option>`);
-                    }
-                    layui.use('form', function () {
-                        var form = layui.form;
-                        form.render();
-                    });
-                },
-                error: function (error) {
-                    console.log(error)
-                }
-            });
-
+            
             $("#OpLocation").empty();
             $.ajax({
                 url: "@(Url.Action("getLocationAll", "DDL"))",
@@ -552,58 +534,10 @@
                     console.log(error)
                 }
             });
-
-            $("#OpChargeEmpname").empty();
-            $.ajax({
-                url: "@(Url.Action("getChargePerson", "DDL"))",
-                type: "POST",
-                dataType: 'json',
-                success: function (result) {
-                    $('#OpChargeEmpname').append(new Option());
-                    for (let i = 0, len = result.length; i < len; i++) {
-                        $("#OpChargeEmpname").append(`<option value="${result[i].FullName}">${result[i].FullName}</option>`)
-                    }
-                    //进行渲染
-                    layui.use('form', function () {
-                        var form = layui.form;
-                        form.render();
-                    });
-                },
-                error: function (error) {
-                    console.log(error)
-                }
-            });
         }
 
 
         form.on('select(SystemCategory)', function (data) {
-            $("#OpStatus").empty();
-            var SystemCategory = data.value;
-            if (SystemCategory == null || SystemCategory == "") {
-                $("#OpBuilding").empty();
-                $("#OpStatus").empty();
-                $("#OpChargeEmpname").empty();
-                $("#OpCategory").empty();
-                $("#OpLocation").empty();
-                loadOption();
-            } else {
-                $.ajax({
-                    type: "post",
-                    url: "@(Url.Action("getStatus", "DDL"))",
-                    data: { "keyWord": SystemCategory },
-                    dataType: "json",
-                    success: function (result) {
-                        $('#OpStatus').append(new Option());
-                        for (let i = 0, len = result.length; i < len; i++) {
-                            $("#OpStatus").append(`<option value="${result[i].StatusValue}">${result[i].StatusText}</option>`);
-                        }
-                        form.render();
-                    }, error: function () {
-                        layer.alert('请求失败');
-                    }
-                });
-            }
-
 
             $("#OpBuilding").empty();
             var SystemCategory = data.value;
@@ -686,32 +620,30 @@
                 });
             }
 
-            $("#OpChargeEmpname").empty();
-            var SystemCategory = data.value;
-            if (SystemCategory == null || SystemCategory == "") {
-                $("#OpBuilding").empty();
-                $("#OpStatus").empty();
-                $("#OpChargeEmpname").empty();
-                $("#OpCategory").empty();
-                $("#OpLocation").empty();
-                loadOption();
-            } else {
-                $.ajax({
-                    type: "post",
-                    url: "@(Url.Action("getChargePersonBySystemCategory", "DDL"))",
-                    data: { "keyWord": SystemCategory },
-                    dataType: "json",
-                    success: function (result) {
-                        $('#OpChargeEmpname').append(new Option());
-                        for (let i = 0, len = result.length; i < len; i++) {
-                            $("#OpChargeEmpname").append(`<option value="${result[i].FullName}">${result[i].FullName}</option>`);
-                        }
-                        form.render();
-                    }, error: function () {
-                        layer.alert('请求失败');
+            var datanew = [];
+            $.ajax({
+                url: "@(Url.Action("getChargePersonBySystemCategory", "DDL"))",
+                data: { "keyWord": SystemCategory },
+                type: "POST",
+                dataType: 'json',
+                success: function (result) {
+                    for (let i = 0, len = result.length; i < len; i++) {
+                        datanew.push({
+                            name: result[i]['FullName'],
+                            value: result[i]['FullName']
+                        });  
                     }
-                });
-            }
+                    chargeString = xmSelect.render({
+                        el: '#chargeSelect',
+                        name: 'charge',
+                        data: datanew
+                    });
+                    form.render();
+                },
+                error: function (error) {
+                    console.log(error)
+                }
+            });  
         });
 
         form.on('select(Building)', function (data) {
@@ -756,10 +688,10 @@
                 Category: $('#OpCategory').val(),
                 ResponseEmpname: $('#ResponseEmpname').val(),
                 ResponseContent: $('#ResponseContent').val(),
-                ChargeEmpname: $('#OpChargeEmpname').val(),
-                startDate: $('#startDate').val(),
-                endDate: $('#endDate').val(),
-                Status: $('#OpStatus').val(),
+                ChargeEmpname: chargeString.getValue('valueStr'),
+                Status: statusString.getValue('valueStr'),
+                queryYear: $('#queryYear').val(),
+                queryMonths: monthsString.getValue('valueStr')
             }
 
             fetch("@(Url.Action("ProblemListExport", "Repair"))", {
