--- a/888repair/Views/Repair/ProblemDetailVw.cshtml
+++ b/888repair/Views/Repair/ProblemDetailVw.cshtml
@@ -33,81 +33,94 @@
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
         <legend>问题列表</legend>
     </fieldset>
-    <br />
-    <hr />
-    <div id="fillQuestion">
-        <table width="90%" align="center" border="1">
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">ID(请修编号)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="RepairId"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">SystemCategory(系统类别)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="SystemCategory"></label> </td>
+    <form class="layui-form" id="fillQuestion" style="padding-left:2%">
+        <table width="60%" border="2">
+            <tr height="25px">
+                <td align="right" width="30%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">请修编号：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="RepairId"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Building(大楼别)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="Building"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Loaction(位置)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="Loaction"></label> </td>
+            <tr height="25px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">系统类别：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="SystemCategory"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">RoomNum(空间编号)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="RoomNum"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Tel-Ext(联络分机)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="Telephone"></label> </td>
+            <tr height="25px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">大楼别：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="Building"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">repair time(维护时间)：</label></td>
-                <td width="80%" colspan="3">
+            <tr height="25px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">位置：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="Loaction"></label> </td>
+            </tr>
+            <tr height="25px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">空间编号：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="RoomNum"></label> </td>
+            </tr>
+            <tr height="25px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">负责人：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="ChargeEmpname"></label> </td>
+            </tr>
+            <tr height="25px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">反应人：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="ResponseEmpname"></label> </td>
+            </tr>
+            <tr height="25px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">联络分机：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="Telephone"></label> </td>
+            </tr>
+            <tr height="80px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">维护时间：</label></td>
+                <td>
                     <div class="layui-input-inline">
-                        <textarea id="RepairTime" style="font-size:large;width:400%;height:80px" readonly />
+                        <textarea id="RepairTime" style="font-size:16px;width:290%;height:80px" readonly />
                     </div>
                 </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Category(类别)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="Category"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Damage Reason(损坏原因)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="DamageReason"></label> </td>
+            <tr height="25px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">类别：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="Category"></label> </td>
             </tr>
-            <tr height="35px" id="DamageText1" hidden="hidden">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Class/Unit(班级/单位)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="DamageClass"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Name(姓名)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="DamageName"></label> </td>
+            <tr height="25px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">损坏原因：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="DamageReason"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Fill-in Date(填表时间)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="CreatTime"></label> </td>
+            <tr height="25px" id="DamageText1" hidden="hidden">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">班级/单位：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="DamageClass"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Repairer(负责人)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="ChargeEmpname"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Contacts(反应人)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="ResponseEmpname"></label> </td>
+            <tr height="25px" id="DamageText2" hidden="hidden">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">姓名：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="DamageName"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Description(反应内容)：</label></td>
-                <td width="80%" colspan="3">
+            <tr height="25px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">填表时间：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="CreatTime"></label> </td>
+            </tr>
+            <tr height="160px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">反应内容：</label></td>
+                <td>
                     <div class="layui-input-inline">
-                        <textarea id="ResponseContent" style="font-size:large;width:400%;height:170px" readonly />
+                        <textarea id="ResponseContent" style="font-size:16px;width:290%;height:160px" readonly />
                     </div>
                     <div id="imgId">
                     </div>
                 </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">ReplyContent(过去回应内容)：</label></td>
-                <td width="80%" colspan="3">
+            <tr height="160px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">过去回应内容：</label></td>
+                <td>
                     <div class="layui-input-inline">
-                        <textarea id="ReplyContent" style="font-size:large;width:400%;height:170px" readonly />
+                        <textarea id="ReplyContent" style="font-size:16px;width:290%;height:170px" readonly />
                     </div>
                     <div id="imgId2">
                     </div>
                 </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Status(执行状态)：</label></td>
-                <td width="30%">
+            <tr>
+                <td align="right" width="20%" style="background-color:#f9f6f6">
+                    <label style="color:red">*</label>&nbsp;&nbsp;<label style="font-size:16px;color:purple;">执行状态：</label>
+
+                </td>
+                <td>
                     <div class="layui-form layui-form-pane" style="margin-left:20px">
                         <div class="layui-input-inline">
                             <select ID="OpStatus" name="OpStatus" disabled="disabled">
@@ -116,17 +129,20 @@
                         </div>
                     </div>
                 </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Finish Time(完单时间)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="FinishTime"></label> </td>
+            </tr>
+            <tr height="25px">
+                <td align="right" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">完单时间：</label></td>
+                <td> <label style="font-size:16px;margin-left:20px" id="FinishTime"></label> </td>
             </tr>
         </table>
-    </div>
-    <br /><br /><br />
-    <div class="layui-form-item">
-        <div class="layui-input-block" style="margin-left:50%">
-            <button type="button" id="btn_back" class="layui-btn">返回 Back</button>
+        <br /><br />
+        <div class="layui-form-item">
+            <div class="layui-input-block" style="margin-left:25%">
+                <button type="button" id="btn_back" class="layui-btn">返回</button>
+            </div>
         </div>
-    </div>
+    </form>
+    <br /><br /><br />
     <div class="layui-form-item">
         <label class="layui-form-label"></label>
         <div class="layui-input-block">
