--- a/888repair/Views/Repair/RepairDetailVw.cshtml
+++ b/888repair/Views/Repair/RepairDetailVw.cshtml
@@ -33,80 +33,78 @@
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
         <legend>Repair Problem Details 报修单详情</legend>
     </fieldset>
-    <br />
-    <hr />
     <div id="fillQuestion">
-        <table width="90%" align="center" border="1">
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">ID(请修编号)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="RepairId"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">SystemCategory(系统类别)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="SystemCategory"></label> </td>
+        <table width="90%" style="padding-left:2%" border="1">
+            <tr height="25px">
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">ID(请修编号)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="RepairId"></label> </td>
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">SystemCategory(系统类别)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="SystemCategory"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Building(大楼别)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="Building"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Loaction(位置)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="Loaction"></label> </td>
+            <tr height="25px">
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Building(大楼别)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="Building"></label> </td>
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Loaction(位置)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="Loaction"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">RoomNum(空间编号)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="RoomNum"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Tel-Ext(联络分机)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="Telephone"></label> </td>
+            <tr height="25px">
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">RoomNum(空间编号)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="RoomNum"></label> </td>
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Tel-Ext(联络分机)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="Telephone"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">repair time(维护时间)：</label></td>
+            <tr height="25px">
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">repair time(维护时间)：</label></td>
                 <td width="80%" colspan="3">
                     <div class="layui-input-inline">
-                        <textarea id="RepairTime" style="font-size:large;width:400%;height:80px" readonly />
+                        <textarea id="RepairTime" style="font-size:16px;width:400%;height:80px" readonly />
                     </div>
                 </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Category(类别)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="Category"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Damage Reason(损坏原因)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="DamageReason"></label> </td>
+            <tr height="25px">
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Category(类别)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="Category"></label> </td>
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Damage Reason(损坏原因)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="DamageReason"></label> </td>
             </tr>
-            <tr height="35px" id="DamageText1" hidden="hidden">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Class/Unit(班级/单位)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="DamageClass"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Name(姓名)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="DamageName"></label> </td>
+            <tr height="25px" id="DamageText1" hidden="hidden">
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Class/Unit(班级/单位)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="DamageClass"></label> </td>
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Name(姓名)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="DamageName"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Fill-in Date(填表时间)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="CreatTime"></label> </td>
+            <tr height="25px">
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Fill-in Date(填表时间)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="CreatTime"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Repairer(负责人)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="ChargeEmpname"></label> </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Contacts(反应人)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="ResponseEmpname"></label> </td>
+            <tr height="25px">
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Repairer(负责人)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="ChargeEmpname"></label> </td>
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Contacts(反应人)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="ResponseEmpname"></label> </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Description(反应内容)：</label></td>
+            <tr height="25px">
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Description(反应内容)：</label></td>
                 <td width="80%" colspan="3">
                     <div class="layui-input-inline">
-                        <textarea id="ResponseContent" style="font-size:large;width:400%;height:170px" readonly />
+                        <textarea id="ResponseContent" style="font-size:16px;width:400%;height:170px" readonly />
                     </div>
                     <div id="imgId">
                     </div>
                 </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">ReplyContent(过去回应内容)：</label></td>
+            <tr height="25px">
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">ReplyContent(过去回应内容)：</label></td>
                 <td width="80%" colspan="3">
                     <div class="layui-input-inline">
-                        <textarea id="ReplyContent" style="font-size:large;width:400%;height:170px" readonly />
+                        <textarea id="ReplyContent" style="font-size:16px;width:400%;height:170px" readonly />
                     </div>
                     <div id="imgId2">
                     </div>
                 </td>
             </tr>
-            <tr height="35px">
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Status(执行状态)：</label></td>
+            <tr height="25px">
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Status(执行状态)：</label></td>
                 <td width="30%">
                     <div class="layui-form layui-form-pane" style="margin-left:20px">
                         <div class="layui-input-inline">
@@ -116,53 +114,14 @@
                         </div>
                     </div>
                 </td>
-                <td align="center" width="20%" style="background-color:#f1e6ee"><label style="font-size:large;color:#c83290;">Finish Time(完单时间)：</label></td>
-                <td width="30%"> <label style="font-size:large;margin-left:20px" id="FinishTime"></label> </td>
+                <td align="center" width="20%" style="background-color:#f9f6f6"><label style="font-size:16px;color:purple;">Finish Time(完单时间)：</label></td>
+                <td width="30%"> <label style="font-size:16px;margin-left:20px" id="FinishTime"></label> </td>
             </tr>
-            @*
-        <tr height="200px">
-            <td align="right" width="40%" style="background-color:lightgrey"><label style="font-size:large;color:purple;">Description(反应内容)：</label></td>
-            <td width="60%">
-                <div class="layui-input-inline">
-                    <textarea id="ResponseContent" style="font-size:large;width:300%;height:170px" readonly />
-                </div>
-                <div id="imgId">
-                </div>
-            </td>
-        </tr>
-        <tr height="200px">
-            <td align="right" width="40%" style="background-color:lightgrey"><label style="font-size:large;color:purple;">ReplyContent(过去回应内容)：</label></td>
-            <td width="60%">
-                <div class="layui-input-inline">
-                    <textarea id="ReplyContent" style="font-size:large;width:300%;height:170px" readonly />
-                </div>
-                <div id="imgId2">
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td align="right" width="40%" style="background-color:lightgrey">
-                <label style="font-size:large;color:purple;">Status(执行状态)：</label>
-            </td>
-            <td width="60%">
-                <div class="layui-form layui-form-pane" style="margin-left:20px">
-                    <div class="layui-input-inline">
-                        <select ID="OpStatus" name="OpStatus" disabled="disabled">
-                            <option value=""></option>
-                        </select>
-                    </div>
-                </div>
-            </td>
-        </tr>
-        <tr height="30px">
-            <td align="right" width="40%" style="background-color:lightgrey"><label style="font-size:large;color:purple;">Finish Time(完单时间)：</label></td>
-            <td width="60%"> <label style="font-size:large;margin-left:20px" id="FinishTime"></label> </td>
-        </tr>*@
         </table>
     </div>
     <br /><br /><br />
     <div class="layui-form-item">
-        <div class="layui-input-block" style="margin-left:50%">
+        <div class="layui-input-block" style="margin-left:35%">
             <button type="button" id="btn_back" class="layui-btn">返回 Back</button>
         </div>
     </div>
