--- a/888repair/Views/Repair/ReplyRepairIndex.cshtml
+++ b/888repair/Views/Repair/ReplyRepairIndex.cshtml
@@ -20,89 +20,29 @@
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
         <legend>回复问题</legend>
     </fieldset>
-    @*<form class="layui-form layui-form-pane" action="">
+    <form class="layui-form layui-form-pane" action="">
         <div class="layui-form-item">
-            <div class="layui-inline">
-                <label class="layui-form-label">系统类别</label>
-                <div class="layui-input-inline">
-                    <select ID="OpSystemCategory" name="OpSystemCategory" lay-filter="SystemCategory">
-                        <option value=""></option>
-                    </select>
-                </div>
-            </div>
-            <div class="layui-inline">
-                <label class="layui-form-label">大楼别</label>
-                <div class="layui-input-inline">
-                    <select ID="OpBuilding" name="OpBuilding" lay-filter="Building">
-                        <option value=""></option>
-                    </select>
-                </div>
-            </div>
-            <div class="layui-inline">
-                <label class="layui-form-label">位置</label>
-                <div class="layui-input-inline">
-                    <select ID="OpLocation" name="OpLocation">
-                        <option value=""></option>
-                    </select>
-                </div>
-            </div>
-            <div class="layui-inline">
-                <label class="layui-form-label">类别</label>
-                <div class="layui-input-inline">
-                    <select ID="OpCategory" name="OpCategory">
-                        <option value=""></option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <div class="layui-inline">
-                <label class="layui-form-label">反应人姓名</label>
-                <div class="layui-input-inline">
-                    <input id="ResponseEmpname" name="ResponseEmpname" class="layui-input">
-                </div>
-            </div>
-            <div class="layui-inline">
-                <label class="layui-form-label">反应内容</label>
-                <div class="layui-input-inline">
-                    <input id="ResponseContent" name="ResponseContent" class="layui-input" />
-                </div>
-            </div>
             <div class="layui-inline">
                 <label class="layui-form-label">执行状态</label>
                 <div class="layui-input-inline">
-                    <select ID="OpStatus" name="OpStatus">
-                        <option value=""></option>
-                    </select>
+                    <div id="statusSelect"> </div>
                 </div>
             </div>
-            <div class="layui-inline">
-                <label class="layui-form-label">负责人</label>
-                <div class="layui-input-inline">
-                    <select ID="OpChargeEmpname" name="OpChargeEmpname" lay-search="">
-                        <option value=""></option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <div class="layui-form-item">
             <div class="layui-inline" id="test6">
-                <label class="layui-form-label">填表时间</label>
-                <div class="layui-input-inline">
-                    <input type="text" class="layui-input" id="startDate">
+                <label class="layui-form-label">填表月份</label>
+                <div class="layui-input-inline" style="width:20%">
+                    @*<input type="text" class="layui-input" id="startDate">*@
+                    <select id="queryYear" lay-filter="queryYear"></select>
                 </div>
-                <div class="layui-form-mid">-</div>
+                <div class="layui-form-mid">年</div>
                 <div class="layui-input-inline">
-                    <input type="text" class="layui-input" id="endDate">
+                    <div id="monthsSelect"></div>
                 </div>
+
+                <div class="layui-form-mid">月</div>
             </div>
         </div>
-    </form>*@
-    
-    @*<hr><br />
-    <label style="color:red;font-size:medium">
-        提示：导出的EXCEL数据为当前查询条件下所能查到的数据。您也可以选择数据表格右上方三个按钮中中间的导出按钮,使用layui自带的导出方法导出。<br>    
-    </label>*@
+    </form>
     <div class="layui-btn-group" style="margin-left:1250px">
         <button class="layui-btn layui-btn-sm" id="btn_search"><i class="layui-icon">查询&nbsp;&#xe615;</i></button>
         <button class="layui-btn layui-btn-sm" id="btn_export"><i class="layui-icon">导出&nbsp;&#xe67d;</i></button>
@@ -197,7 +137,7 @@
                                 last: false,
                                 layout: ['limit', 'prev', 'page', 'next', 'count'] //自定义分页布局
                             }
-                            , height: 720
+                            , height: 670
                             , cellMinWidth: 80
                             //,skin: 'line'
                             //,size: 'lg'
@@ -248,16 +188,9 @@
 
         function reloadDate() {
             var model = {
-                SystemCategory: $('#OpSystemCategory').val(),
-                Building: $('#OpBuilding').val(),
-                Loaction: $('#OpLocation').val(),
-                Category: $('#OpCategory').val(),
-                ResponseEmpname: $('#ResponseEmpname').val(),
-                ResponseContent: $('#ResponseContent').val(),
-                ChargeEmpname: $('#OpChargeEmpname').val(),
-                startDate: $('#startDate').val(),
-                endDate: $('#endDate').val(),
-                Status: $('#OpStatus').val(),
+                Status: statusString.getValue('valueStr'),
+                queryYear: $('#queryYear').val(),
+                queryMonths: monthsString.getValue('valueStr')
             }
             $.ajax({
                 url: "@(Url.Action("getReplyProblemList", "Repair"))",   // 要提交的URL路径
@@ -283,7 +216,64 @@
             });
         }
 
+         var statusString = {};
+        var data = [];
+          $.ajax({
+              url: "@(Url.Action("getStatus", "DDL"))",
+              type: "POST",
+              dataType: 'json',
+              success: function (result) {
+                  for (let i = 0, len = result.length; i < len; i++) {
+                      data.push({
+                          name: result[i]['StatusText'],
+                          value: result[i]['StatusValue']
+                      });  
+                  }
+                  statusString = xmSelect.render({
+                      el: '#statusSelect',
+                      name: 'status',
+                      max: 12,     // 最多选择 3 个
+                      data: data
+                  });
+              },
+              error: function (error) {
+                  console.log(error)
+              }
+          });  
+        
+        var monthsString = {};
+        monthsString = xmSelect.render({
+            el: '#monthsSelect',
+            name: 'months',
+            // layVerify: 'required',
+            max: 12,     // 最多选择 3 个
+            data: [
+                { name: '1', value: 1 },
+                { name: '2', value: 2 },
+                { name: '3', value: 3 },
+                { name: '4', value: 4 },
+                { name: '5', value: 5 },
+                { name: '6', value: 6 },
+                { name: '7', value: 7 },
+                { name: '8', value: 8 },
+                { name: '9', value: 9 },
+                { name: '10', value: 10 },
+                { name: '11', value: 11 },
+                { name: '12', value: 12 }
+            ]
+        });
+
         function loadOption() {
+
+            var myDate = new Date();
+            var startYear = myDate.getFullYear() - 5;//起始年份
+            var endYear = myDate.getFullYear();//结束年份
+            for (var i = startYear; i <= endYear; i++) {
+                $("#queryYear").append("<option value='" + i + "'>" + i + "</option>");
+            }
+            $("#queryYear").val(myDate.getFullYear());
+            form.render();
+
             $("#OpBuilding").empty(); 
             $.ajax({
                 url: "@(Url.Action("getBuilding", "DDL"))",
@@ -541,12 +531,10 @@
 
         function request() {
             var model = {
-                SystemCategory: $('#SystemCategory').val(),
-                KindCategory: $('#KindCategory').val(),
-                startDate: $('#startDate').val(),
-                endDate: $('#endDate').val(),
-                Status: $('#Status').val(),
-            };
+                Status: statusString.getValue('valueStr'),
+                queryYear: $('#queryYear').val(),
+                queryMonths: monthsString.getValue('valueStr')
+            }
 
             fetch("@(Url.Action("ReplyProblemExport", "Repair"))", {
                 method: 'POST',
