--- a/888repair/src/css/layui.css
+++ b/888repair/src/css/layui.css
@@ -568,7 +568,7 @@ a cite{font-style: normal; *cursor:pointer;}
 /* 背景颜色 */
 .layui-bg-red{background-color: #FFD5D5 !important; color: #fff!important;} /*赤*/
 .layui-bg-orange{background-color: #FFB800!important; color: #fff!important;} /*橙*/
-.layui-bg-green{background-color: #EFFFBF!important; color: #fff!important;} /*绿*/
+.layui-bg-green{background-color: #EFFFBF!important; color: #cc6690 !important;} /*绿*/
 .layui-bg-cyan{background-color: #2F4056!important; color: #fff!important;} /*青*/
 .layui-bg-blue{background-color: #1E9FFF!important; color: #fff!important;} /*蓝*/
 .layui-bg-black{background-color: #993366!important; color: #fff!important;} /*深*/
@@ -596,7 +596,7 @@ a cite{font-style: normal; *cursor:pointer;}
 .layui-border{border-width: 1px; border-style: solid; color: #5F5F5F!important;}
 .layui-border-red{border-width: 1px; border-style: solid; border-color: #FF5722!important; color: #FF5722!important;}
 .layui-border-orange{border-width: 1px; border-style: solid; border-color: #FFB800!important; color: #FFB800!important;}
-.layui-border-green{border-width: 1px; border-style: solid; border-color: #009688!important; color: #009688!important;}
+.layui-border-green{border-width: 1px; border-style: solid; border-color: #cc6699 !important; color: #cc6699 !important;}
 .layui-border-cyan{border-width: 1px; border-style: solid; border-color: #2F4056!important; color: #2F4056!important;}
 .layui-border-blue{border-width: 1px; border-style: solid; border-color: #1E9FFF!important; color: #1E9FFF!important;}
 .layui-border-black{border-width: 1px; border-style: solid; border-color: #393D49!important; color: #393D49!important;}
@@ -648,7 +648,7 @@ a cite{font-style: normal; *cursor:pointer;}
 
 .layui-font-red{color: #FF5722 !important;} /*赤*/
 .layui-font-orange{color: #FFB800!important;} /*橙*/
-.layui-font-green{color: #009688!important;} /*绿*/
+.layui-font-green{color: #cc6699 !important;} /*粉*/
 .layui-font-cyan{color: #2F4056!important;} /*青*/
 .layui-font-blue{color: #01AAED!important;} /*蓝*/
 .layui-font-black{color: #000!important;} /*黑*/
