--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
                     <li><a>&nbsp;</a></li>
                     <li id="replyProblem" class="layui-nav-item current" data-id="replyProblem"><a class="layui-nav-item ">回复问题</a></li>
                     <li id="listProblem" class="layui-nav-item current" data-id="listProblem"><a class="layui-nav-item ">问题列表</a></li>
-                    <li id="listProblem" class="layui-nav-item current" data-id="listProblemPC"><a class="layui-nav-item ">问题列表个人</a></li>
+                    <li id="listProblemPC" class="layui-nav-item current" data-id="listProblemPC"><a class="layui-nav-item ">问题列表个人</a></li>
                     <li><a>&nbsp;</a></li>
                     <li id="ProblemRepair" class="layui-nav-item current" data-id="ProblemRepair"><a class="layui-nav-item ">问题列表维护</a></li>
                     <li id="areaMatch" class="layui-nav-item" data-id="areaMatch"><a class="layui-nav-item ">辖区配对维护</a></li>
@@ -146,6 +146,7 @@
         $('#listProblem').hide();
         $('#replyProblem').hide();
         $('#ProblemRepair').hide();
+        $('#listProblemPC').hide();
         
         var logusername = '@(Session["fullname"])';
         var logempno = '@(Session["EmpNo"])';
@@ -180,7 +181,7 @@
         if (logviewer == "1") {
             $('#listProblem').show();
             $('#listProblemPC').show();
-        }
+        } 
 
         if (!(navigator.userAgent.match(/(phone|pad|pod|mobile|ios|android|BlackBerry|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|symbian|transcoder)/i))) {
             @*url = '@Url.Action("Index", "Home")';
@@ -203,6 +204,7 @@
                     {
                         $('#replyProblem').show();
                         $('#listProblem').show();
+                        $('#listProblemPC').show();
                     }
                 }
                 else {
